# partitions-cli

./: .license-tools-config.json  .pre-commit-config.yaml  Cargo.toml  flake.nix  rust-toolchain.toml
src/: main.rs  types.rs
