[package]
name = "partition"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
camino = { version = "1.2.1", features = ["serde1"] }
clap = { version = "4.5.48", features = ["derive"] }
itertools = "0.14.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
walkdir = "2.5.0"

[lints.clippy]
pedantic = "warn"
